service/k3s/templates/basic-traefik-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: whoami
  selector:
    app: whoami
---
# Serve global default cert i.e. self-signed-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test
  namespace: whoami
spec:
  routes:
    - match: Host(`test.${domain}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
---
# Serve letsencrypt test certificate i.e. test-http01-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  routes:
    - match: Host(`whoami.${domain}`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: test-http01-cert
---
# Serve letsencrypt live/valid certificate i.e. live-http01-cert
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
spec:
  routes:
    - match: Host(`dash.${domain}`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: live-http01-cert
